// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`distinct connections mode should report operation validation issues by streaming them 1`] = `
Object {
  "data": Object {
    "errors": Array [
      Object {
        "locations": Array [
          Object {
            "column": 3,
            "line": 1,
          },
        ],
        "message": "Cannot query field \\"notExists\\" on type \\"Query\\".",
      },
    ],
  },
  "event": "next",
}
`;

exports[`distinct connections mode should report operation validation issues by streaming them 2`] = `
Object {
  "data": null,
  "event": "complete",
}
`;

exports[`distinct connections mode should stream query operations to connected event stream and then disconnect 1`] = `
Object {
  "data": Object {
    "data": Object {
      "getValue": "value",
    },
  },
  "event": "next",
}
`;

exports[`distinct connections mode should stream query operations to connected event stream and then disconnect 2`] = `
Object {
  "data": null,
  "event": "complete",
}
`;

exports[`distinct connections mode should stream query operations to connected event stream and then disconnect 3`] = `
Object {
  "data": Object {
    "data": Object {
      "getValue": "value",
    },
  },
  "event": "next",
}
`;

exports[`distinct connections mode should stream query operations to connected event stream and then disconnect 4`] = `
Object {
  "data": null,
  "event": "complete",
}
`;

exports[`distinct connections mode should stream subscription operations to connected event stream and then disconnect 1`] = `
Object {
  "data": Object {
    "data": Object {
      "greetings": "Hi",
    },
  },
  "event": "next",
}
`;

exports[`distinct connections mode should stream subscription operations to connected event stream and then disconnect 2`] = `
Object {
  "data": Object {
    "data": Object {
      "greetings": "Bonjour",
    },
  },
  "event": "next",
}
`;

exports[`distinct connections mode should stream subscription operations to connected event stream and then disconnect 3`] = `
Object {
  "data": Object {
    "data": Object {
      "greetings": "Hola",
    },
  },
  "event": "next",
}
`;

exports[`distinct connections mode should stream subscription operations to connected event stream and then disconnect 4`] = `
Object {
  "data": Object {
    "data": Object {
      "greetings": "Ciao",
    },
  },
  "event": "next",
}
`;

exports[`distinct connections mode should stream subscription operations to connected event stream and then disconnect 5`] = `
Object {
  "data": Object {
    "data": Object {
      "greetings": "Zdravo",
    },
  },
  "event": "next",
}
`;

exports[`distinct connections mode should stream subscription operations to connected event stream and then disconnect 6`] = `
Object {
  "data": null,
  "event": "complete",
}
`;

exports[`distinct connections mode should stream subscription operations to connected event stream and then disconnect 7`] = `
Object {
  "data": Object {
    "data": Object {
      "greetings": "Hi",
    },
  },
  "event": "next",
}
`;

exports[`distinct connections mode should stream subscription operations to connected event stream and then disconnect 8`] = `
Object {
  "data": Object {
    "data": Object {
      "greetings": "Bonjour",
    },
  },
  "event": "next",
}
`;

exports[`distinct connections mode should stream subscription operations to connected event stream and then disconnect 9`] = `
Object {
  "data": Object {
    "data": Object {
      "greetings": "Hola",
    },
  },
  "event": "next",
}
`;

exports[`distinct connections mode should stream subscription operations to connected event stream and then disconnect 10`] = `
Object {
  "data": Object {
    "data": Object {
      "greetings": "Ciao",
    },
  },
  "event": "next",
}
`;

exports[`distinct connections mode should stream subscription operations to connected event stream and then disconnect 11`] = `
Object {
  "data": Object {
    "data": Object {
      "greetings": "Zdravo",
    },
  },
  "event": "next",
}
`;

exports[`distinct connections mode should stream subscription operations to connected event stream and then disconnect 12`] = `
Object {
  "data": null,
  "event": "complete",
}
`;

exports[`express should work as advertised in the readme 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "greetings": "Hi",
      },
    },
  ],
  Array [
    Object {
      "data": Object {
        "greetings": "Bonjour",
      },
    },
  ],
  Array [
    Object {
      "data": Object {
        "greetings": "Hola",
      },
    },
  ],
  Array [
    Object {
      "data": Object {
        "greetings": "Ciao",
      },
    },
  ],
  Array [
    Object {
      "data": Object {
        "greetings": "Zdravo",
      },
    },
  ],
]
`;

exports[`single connection mode should report operation validation issues to request 1`] = `"{\\"errors\\":[{\\"message\\":\\"Cannot query field \\\\\\"notExists\\\\\\" on type \\\\\\"Query\\\\\\".\\",\\"locations\\":[{\\"line\\":1,\\"column\\":3}]}]}"`;

exports[`single connection mode should stream query operations to connected event stream 1`] = `"{\\"id\\":\\"1\\",\\"payload\\":{\\"data\\":{\\"getValue\\":\\"value\\"}}}"`;

exports[`single connection mode should stream subscription operations to connected event stream 1`] = `"{\\"id\\":\\"1\\",\\"payload\\":{\\"data\\":{\\"greetings\\":\\"Hi\\"}}}"`;

exports[`single connection mode should stream subscription operations to connected event stream 2`] = `"{\\"id\\":\\"1\\",\\"payload\\":{\\"data\\":{\\"greetings\\":\\"Bonjour\\"}}}"`;

exports[`single connection mode should stream subscription operations to connected event stream 3`] = `"{\\"id\\":\\"1\\",\\"payload\\":{\\"data\\":{\\"greetings\\":\\"Hola\\"}}}"`;

exports[`single connection mode should stream subscription operations to connected event stream 4`] = `"{\\"id\\":\\"1\\",\\"payload\\":{\\"data\\":{\\"greetings\\":\\"Ciao\\"}}}"`;

exports[`single connection mode should stream subscription operations to connected event stream 5`] = `"{\\"id\\":\\"1\\",\\"payload\\":{\\"data\\":{\\"greetings\\":\\"Zdravo\\"}}}"`;
